envoy/elements/auth/auth-client.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: auth-client
spec:
  workloadSelector:
    labels:
      app: frontend #
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND # 
      listener:
        portNumber: 8081 # port number of ping
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value: 
        name: envoy.filters.http.wasm
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          config:
            name: auth-block-client
            root_id: auth-block-client
            vm_config:
              vm_id: vm.sentinel.auth-client
              runtime: envoy.wasm.runtime.v8
              code:
                local:
                  filename: /etc/auth.wasm
              allow_precompiled: false
  - applyTo: CLUSTER
    match:
      cluster:
        service: httpbin.org
    patch:
      operation: ADD
      value:
        name: httpbin
        connect_timeout: 5s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: httpbin
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: httpbin.org
                        port_value: 80
